# SJO038

./: .gitignore  README.md
HelloWorld/: hello  hello.cpp
MathExercise/: divbytwo.cpp
Quadratic/: quadratic.cpp
Sum/: sum  sum.cpp  sum_ab.cpp
ros2_ws/: frames_2024-10-28_17.29.49.gv  frames_2024-11-05_18.21.28.gv  frames_2024-11-05_18.31.29.gv  frames_2024-11-05_18.34.26.gv  frames_2024-11-05_18.39.37.gv  frames_2024-11-05_18.49.15.gv  frames_2024-11-05_18.52.17.gv  frames_2024-11-05_18.53.42.gv  frames_2024-11-05_19.04.40.gv  frames_2024-11-05_20.50.54.gv  frames_2024-11-08_12.52.23.gv
ros2_ws/numbers.bag/: metadata.yaml  numbers.bag_0.db3
ros2_ws/src/examples/: CMakeLists.txt  package.xml
ros2_ws/src/examples/src/: publisher.cpp  subscriber.cpp
ros2_ws/src/follower_bot/: CMakeLists.txt  package.xml
ros2_ws/src/follower_bot/launch/: multi_robot_setup.launch.py
ros2_ws/src/follower_bot/src/: robot_follower.cpp
ros2_ws/src/stats/: CMakeLists.txt  package.xml
ros2_ws/src/stats/src/: mean.cpp  median.cpp  mode.cpp
ros2_ws/src/sum/: CMakeLists.txt  package.xml
ros2_ws/src/sum/src/: sum.cpp
ros2_ws/src/wander_bot/: CMakeLists.txt  package.xml
ros2_ws/src/wander_bot/src/: wander.cpp
tb3_ws/src/robot_trajectory/: CMakeLists.txt  package.xml
tb3_ws/src/robot_trajectory/launch/: square.launch.py
tb3_ws/src/robot_trajectory/src/: square.cpp  square_odom.cpp
